# Music-can-weep

./: .breakpoints  .gitignore  .replit  Buttons.py  Convert.py  Favourites.py  Procfile  README.md  Response.py  TOKEN.txt  convert.py  custom_errors.py  discord_emojis.py  errors.py  event.py  favourites.json  favourites.py  guildext.py  key.py  keys.py  literals.py  log.py  main.py  my_buttons.py  notes.txt  online.py  pyproject.toml  replies.py  requirements.txt  requirements.txt   string_literals.py  subtitles.py  typechecking.py  webhook_logger.py  webserver.py  youtube_utils.py
Cogs/: admin.py  autoplay.py  bot_admin.py  event.py  help.py  music.py  other.py  play.py  playlist.py  queue.py  utility.py  voice.py
Database/: DiscordServers.json  Management.py  server.py  user_playlist.py
Database/Favourites/: 576739059452346403.json  635482150531104788.json  641221311024332801.json  662679241913008158.json  707079033132810282.json  754213347376889916.json  782083727537995822.json  812808602997620756.json  838435478310223903.json  935417425690755092.json  (+1 more)
Music/: VoiceState.py  queue.py  song_queue.py  song_track.py  voice_state.py  voice_utils.py
cogs/: admin.py  audiocontrol.py  audiomodify.py  autoplay.py  bot_admin.py  event.py  help.py  lyrics.py  music.py  other.py  play.py  playlist.py  queue.py  utility.py  voice.py
database/: server.py  user_playlist.py
exe/: libopus.0.dylib
music/: __init__.py  audio_message.py  song_queue.py  song_track.py  voice_constants.py  voice_utils.py
tests/: test_convert.py  test_queue.py  test_youtube_utils.py
(+2 files in other folders)
