[tool.poetry]
name = "repl_python3_discord-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
discord-components = "^2.1.2"
replit = "^3.2.4"
langcodes = "^3.3.0"
requests = "^2.27.1"
bs4 = "^0.0.1"
lxml = "^4.7.1"
language-data = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
