[tool.poetry]
name = "repl_python3_beta_Music-can-weep-queuing-work"
version = "0.1.0"
description = ""
authors = ["JustMCW <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.3"
langcodes = "^3.3.0"
youtube_dl = "^2021.12.17"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
